--- a/crypto_dash/package.json
+++ b/crypto_dash/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "d3": "^7.3.0",
     "d3-time-format": "^4.1.0",
+    "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
